--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -16,14 +16,10 @@
     "<a id='intro'></a>\n",
     "## Introduction\n",
     "\n",
-    "A/B tests are very commonly performed by data analysts and data scientists. For this project, you will be working to understand the results of an A/B test run by an e-commerce website.  Your goal is to work through this notebook to help the company understand if they should:\n",
+    "A/B tests are very commonly performed by data analysts and data scientists. For this project, I will be working to understand the results of an A/B test run by an e-commerce website.  My goal is to work through this notebook to help the company understand if they should:\n",
     "- Implement the new webpage, \n",
     "- Keep the old webpage, or \n",
     "- Perhaps run the experiment longer to make their decision.\n",
-    "\n",
-    "Each **ToDo** task below has an associated quiz present in the classroom.  Though the classroom quizzes are **not necessary** to complete the project, they help ensure you are on the right track as you work through the project, and you can feel more confident in your final submission meeting the [rubric](https://review.udacity.com/#!/rubrics/1214/view) specification. \n",
-    "\n",
-    ">**Tip**: Though it's not a mandate, students can attempt the classroom quizzes to ensure statistical numeric values are calculated correctly in many cases.\n",
     "\n",
     "<a id='probability'></a>\n",
     "## Part I - Probability\n",
@@ -50,7 +46,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ToDo 1.1\n",
     "Now, read in the `ab_data.csv` data. Store it in `df`. Below is the description of the data, there are a total of 5 columns:\n",
     "\n",
     "<center>\n",
@@ -63,10 +58,6 @@
     "|landing_page|It denotes whether the user visited the old or new webpage.|`['old_page', 'new_page']`|\n",
     "|converted|It denotes whether the user decided to pay for the company's product. Here, `1` means yes, the user bought the product.|`[0, 1]`|\n",
     "</center>\n",
-    "Use your dataframe to answer the questions in Quiz 1 of the classroom.\n",
-    "\n",
-    "\n",
-    ">**Tip**: Please save your work regularly.\n",
     "\n",
     "**a.** Read in the dataset from the `ab_data.csv` file and take a look at the top few rows here:"
    ]
@@ -358,7 +349,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ToDo 1.2  \n",
     "In a particular row, the **group** and **landing_page** columns should have either of the following acceptable values:\n",
     "\n",
     "|user_id| timestamp|group|landing_page|converted|\n",
@@ -370,11 +360,7 @@
     "It means, the `control` group users should match with `old_page`; and `treatment` group users should matched with the `new_page`. \n",
     "\n",
     "However, for the rows where `treatment` does not match with `new_page` or `control` does not match with `old_page`, we cannot be sure if such rows truly received the new or old wepage.  \n",
-    "\n",
-    "\n",
-    "Use **Quiz 2** in the classroom to figure out how should we handle the rows where the group and landing_page columns don't match?\n",
-    "\n",
-    "**a.** Now use the answer to the quiz to create a new dataset that meets the specifications from the quiz.  Store your new dataframe in **df2**."
+    "\n"
    ]
   },
   {
