--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -687,12 +687,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ToDo 1.4  \n",
-    "Use **df2** in the cells below to answer the quiz questions related to **Quiz 4** in the classroom.\n",
-    "\n",
     "**a.** What is the probability of an individual converting regardless of the page they receive?<br><br>\n",
-    "\n",
-    ">**Tip**: The probability  you'll compute represents the overall \"converted\" success rate in the population and you may call it $p_{population}$.\n",
     "\n"
    ]
   },
@@ -858,15 +853,7 @@
     "\n",
     "These questions are the difficult parts associated with A/B tests in general.  \n",
     "\n",
-    "\n",
-    "### ToDo 2.1\n",
-    "For now, consider you need to make the decision just based on all the data provided.  \n",
-    "\n",
-    "> Recall that you just calculated that the \"converted\" probability (or rate) for the old page is *slightly* higher than that of the new page (ToDo 1.4.c). \n",
-    "\n",
-    "If you want to assume that the old page is better unless the new page proves to be definitely better at a Type I error rate of 5%, what should be your null and alternative hypotheses (**$H_0$** and **$H_1$**)?  \n",
-    "\n",
-    "You can state your hypothesis in terms of words or in terms of **$p_{old}$** and **$p_{new}$**, which are the \"converted\" probability (or rate) for the old and new pages respectively."
+    "\n"
    ]
   },
   {
@@ -881,13 +868,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ToDo 2.2 - Null Hypothesis $H_0$ Testing\n",
     "Under the null hypothesis $H_0$, assume that $p_{new}$ and $p_{old}$ are equal. Furthermore, assume that $p_{new}$ and $p_{old}$ both are equal to the **converted** success rate in the `df2` data regardless of the page. So, our assumption is: <br><br>\n",
     "<center>\n",
     "$p_{new}$ = $p_{old}$ = $p_{population}$\n",
     "</center>\n",
     "\n",
-    "In this section, you will: \n",
+    "In this section, I will: \n",
     "\n",
     "- Simulate (bootstrap) sample data set for both groups, and compute the  \"converted\" probability $p$ for those samples. \n",
     "\n",
@@ -901,8 +887,7 @@
     "- Perform the sampling distribution for the \"difference in the converted probability\" between the two simulated-samples over 10,000 iterations; and calculate an estimate. \n",
     "\n",
     "\n",
-    "\n",
-    "Use the cells below to provide the necessary parts of this simulation.  You can use **Quiz 5** in the classroom to make sure you are on the right track."
+    "\n"
    ]
   },
   {
@@ -1388,7 +1373,6 @@
     "import statsmodels.api as sm\n",
     "#import statsmodels.discrete.discrete_model\n",
     "#import scipy.stats\n",
-    "# ToDo: Complete the sm.stats.proportions_ztest() method arguments\n",
     "#count = np.array([convert_old, convert_new])\n",
     "#nobs = np.array([n_old, n_new])\n",
     "#z_score, p_value = sm.stats.proportions_ztest(count,nobs,alternative='larger')\n",
@@ -1420,7 +1404,6 @@
     "<a id='regression'></a>\n",
     "### Part III - A regression approach\n",
     "\n",
-    "### ToDo 3.1 \n",
     "In this final part, you will see that the result you achieved in the A/B test in Part II above can also be achieved by performing regression.<br><br> \n",
     "\n",
     "**a.** Since each row in the `df2` data is either a conversion or no conversion, what type of regression should you be performing in this case?"
@@ -1811,11 +1794,7 @@
    "metadata": {},
    "source": [
     "**e.** What is the p-value associated with **ab_page**? Why does it differ from the value you found in **Part II**?<br><br>  \n",
-    "\n",
-    "**Hints**: \n",
-    "- What are the null and alternative hypotheses associated with your regression model, and how do they compare to the null and alternative hypotheses in **Part II**? \n",
-    "- You may comment on if these hypothesis (Part II vs. Part III) are one-sided or two-sided. \n",
-    "- You may also compare the current p-value with the Type I error rate (0.05).\n"
+    "\n"
    ]
   },
   {
@@ -1849,9 +1828,7 @@
     "1. You will need to read in the **countries.csv** dataset and merge together your `df2` datasets on the appropriate rows. You call the resulting dataframe `df_merged`. [Here](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.join.html) are the docs for joining tables. \n",
     "\n",
     "2. Does it appear that country had an impact on conversion?  To answer this question, consider the three unique values, `['UK', 'US', 'CA']`, in the `country` column. Create dummy variables for these country columns. \n",
-    ">**Hint:** Use `pandas.get_dummies()` to create dummy variables. **You will utilize two columns for the three dummy variables.** \n",
-    "\n",
-    " Provide the statistical output as well as a written response to answer this question."
+    "\n"
    ]
   },
   {
