--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -947,7 +947,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**c.** What is $n_{new}$, the number of individuals in the treatment group? <br><br>\n",
+    "**c.** What is $n_{new}$, the number of individuals in the treatment group? <br><br>\n"
    ]
   },
   {
