--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -1330,10 +1330,6 @@
     "\n",
     "Decide if your hypothesis is either a two-tailed, left-tailed, or **right-tailed** test. Accordingly, reject OR fail to reject the  null based on the comparison between $Z_{score}$ and $Z_{\\alpha}$. We determine whether or not the $Z_{score}$ lies in the \"rejection region\" in the distribution. In other words, a \"rejection region\" is an interval where the null hypothesis is rejected iff the $Z_{score}$ lies in that region.\n",
     "\n",
-    ">Hint:<br>\n",
-    "For a right-tailed test, reject null if $Z_{score}$ > $Z_{\\alpha}$. <br>\n",
-    "For a left-tailed test, reject null if $Z_{score}$ < $Z_{\\alpha}$. \n",
-    "\n",
     "\n",
     "\n",
     "\n",
@@ -1341,8 +1337,7 @@
     "- Example 9.1.2 on this [page](https://stats.libretexts.org/Bookshelves/Introductory_Statistics/Book%3A_Introductory_Statistics_(Shafer_and_Zhang)/09%3A_Two-Sample_Problems/9.01%3A_Comparison_of_Two_Population_Means-_Large_Independent_Samples), courtesy www.stats.libretexts.org\n",
     "\n",
     "---\n",
-    "\n",
-    ">**Tip**: You don't have to dive deeper into z-test for this exercise. **Try having an overview of what does z-score signify in general.** "
+    "\n"
    ]
   },
   {
@@ -2183,11 +2178,7 @@
     "Provide the summary results (statistical output), and your conclusions (written response) based on the results. \n",
     "\n",
     ">**Tip**: Conclusions should include both statistical reasoning, and practical reasoning for the situation. \n",
-    "\n",
-    ">**Hints**: \n",
-    "- Look at all of p-values in the summary, and compare against the Type I error rate (0.05). \n",
-    "- Can you reject/fail to reject the null hypotheses (regression model)?\n",
-    "- Comment on the effect of page and country to predict the conversion.\n"
+    "\n"
    ]
   },
   {
@@ -2359,24 +2350,7 @@
    "metadata": {},
    "source": [
     "<a id='finalcheck'></a>\n",
-    "## Final Check!\n",
-    "\n",
-    "Congratulations!  You have reached the end of the A/B Test Results project!  You should be very proud of all you have accomplished!\n",
-    "\n",
-    "> **Tip**: Once you are satisfied with your work here, check over your notebook to make sure that it satisfies all the specifications mentioned in the rubric. You should also probably remove all of the \"Hints\" and \"Tips\" like this one so that the presentation is as polished as possible.\n",
-    "\n",
-    "\n",
-    "<a id='submission'></a>\n",
-    "## Submission\n",
-    "You may either submit your notebook through the \"SUBMIT PROJECT\" button at the bottom of this workspace, or you may work from your local machine and submit on  the last page of this project lesson.  \n",
-    "\n",
-    "1. Before you submit your project, you need to create a .html or .pdf version of this notebook in the workspace here. To do that, run the code cell below. If it worked correctly, you should get a return code of 0, and you should see the generated .html file in the workspace directory (click on the orange Jupyter icon in the upper left).\n",
-    "\n",
-    "\n",
-    "2. Alternatively, you can download this report as .html via the **File** > **Download as** submenu, and then manually upload it into the workspace directory by clicking on the orange Jupyter icon in the upper left, then using the Upload button.\n",
-    "\n",
-    "\n",
-    "3. Once you've done this, you can submit your project by clicking on the \"Submit Project\" button in the lower right here. This will create and submit a zip file with this .ipynb doc and the .html or .pdf version you created. Congratulations!"
+    "## Final Check!\n"
    ]
   },
   {
