--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -770,8 +770,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">**Tip**: The probabilities you've computed in the points (b). and (c). above can also be treated as conversion rate. \n",
-    "Calculate the actual difference  (`obs_diff`) between the conversion rates for the two groups. You will need that later.  "
    ]
   },
   {
@@ -1160,12 +1158,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**i. Histogram**<br> \n",
-    "Plot a histogram of the **p_diffs**.  Does this plot look like what you expected?  Use the matching problem in the classroom to assure you fully understand what was computed here.<br><br>\n",
-    "\n",
-    "Also, use `plt.axvline()` method to mark the actual difference observed  in the `df2` data (recall `obs_diff`), in the chart.  \n",
-    "\n",
-    ">**Tip**: Display title, x-label, and y-label in the chart."
+    "**i. Histogram**<br> \n"
+    "\n"
    ]
   },
   {
@@ -1368,9 +1362,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**n.** What do the z-score and p-value you computed in the previous question mean for the conversion rates of the old and new pages?  Do they agree with the findings in parts **j.** and **k.**?<br><br>\n",
-    "\n",
-    ">**Tip**: Notice whether the p-value is similar to the one computed earlier. Accordingly, can you reject/fail to reject the null hypothesis? It is important to correctly interpret the test statistic and p-value."
+    "**n.** What do the z-score and p-value I computed in the previous question mean for the conversion rates of the old and new pages?  Do they agree with the findings in parts **j.** and **k.**?<br><br>\n",
+    "\n"
    ]
   },
   {
