--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -1158,7 +1158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**i. Histogram**<br> \n"
+    "**i. Histogram**<br> \n",
     "\n"
    ]
   },
