--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -2164,14 +2164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**h. Fit your model and obtain the results**<br> \n",
-    "Though you have now looked at the individual factors of country and page on conversion, we would now like to look at an interaction between page and country to see if are there significant effects on conversion.  **Create the necessary additional columns, and fit the new model.** \n",
-    "\n",
-    "\n",
-    "Provide the summary results (statistical output), and your conclusions (written response) based on the results. \n",
-    "\n",
-    ">**Tip**: Conclusions should include both statistical reasoning, and practical reasoning for the situation. \n",
-    "\n"
+    "**h. Fit the model and obtain the results**<br> \n"
    ]
   },
   {
