--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -38,7 +38,6 @@
     "import random\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "#We are setting the seed to assure you get the same answers on quizzes as we set up\n",
     "random.seed(42)"
    ]
   },
@@ -825,7 +824,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**e.** Consider your results from parts (a) through (d) above, and explain below whether the new `treatment` group users lead to more conversions."
+    "**e.** Consider the results from parts (a) through (d) above, and explain below whether the new `treatment` group users lead to more conversions."
    ]
   },
   {
@@ -842,11 +841,11 @@
     "<a id='ab_test'></a>\n",
     "## Part II - A/B Test\n",
     "\n",
-    "Since a timestamp is associated with each event, you could run a hypothesis test continuously as long as you observe the events. \n",
+    "Since a timestamp is associated with each event, I could run a hypothesis test continuously as long as I observe the events. \n",
     "\n",
     "However, then the hard questions would be: \n",
-    "- Do you stop as soon as one page is considered significantly better than another or does it need to happen consistently for a certain amount of time?  \n",
-    "- How long do you run to render a decision that neither page is better than another?  \n",
+    "- Do I stop as soon as one page is considered significantly better than another or does it need to happen consistently for a certain amount of time?  \n",
+    "- How long do I run to render a decision that neither page is better than another?  \n",
     "\n",
     "These questions are the difficult parts associated with A/B tests in general.  \n",
     "\n",
@@ -1104,7 +1103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**g.** Find the difference in the \"converted\" probability $(p{'}_{new}$ - $p{'}_{old})$ for your simulated samples from the parts (e) and (f) above. "
+    "**g.** Find the difference in the \"converted\" probability $(p{'}_{new}$ - $p{'}_{old})$ for my simulated samples from the parts (e) and (f) above. "
    ]
   },
   {
@@ -1134,7 +1133,7 @@
    "source": [
     "\n",
     "**h. Sampling distribution** <br>\n",
-    "Re-create `new_page_converted` and `old_page_converted` and find the $(p{'}_{new}$ - $p{'}_{old})$ value 10,000 times using the same simulation process you used in parts (a) through (g) above. \n",
+    "Re-create `new_page_converted` and `old_page_converted` and find the $(p{'}_{new}$ - $p{'}_{old})$ value 10,000 times using the same simulation process I used in parts (a) through (g) above. \n",
     "\n",
     "<br>\n",
     "Store all  $(p{'}_{new}$ - $p{'}_{old})$  values in a NumPy array called `p_diffs`."
@@ -1286,7 +1285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**m.** Now use `sm.stats.proportions_ztest()` to compute your test statistic and p-value.  [Here](https://www.statsmodels.org/stable/generated/statsmodels.stats.proportion.proportions_ztest.html) is a helpful link on using the built in.\n",
+    "**m.** Now use `sm.stats.proportions_ztest()` to compute my test statistic and p-value.  [Here](https://www.statsmodels.org/stable/generated/statsmodels.stats.proportion.proportions_ztest.html) is a helpful link on using the built in.\n",
     "\n",
     "The syntax is: \n",
     "```bash\n",
@@ -1300,10 +1299,10 @@
     "\n",
     "---\n",
     "### About the two-sample z-test\n",
-    "Recall that you have plotted a distribution `p_diffs` representing the\n",
-    "difference in the \"converted\" probability  $(p{'}_{new}-p{'}_{old})$  for your two simulated samples 10,000 times. \n",
+    "Recall that I have plotted a distribution `p_diffs` representing the\n",
+    "difference in the \"converted\" probability  $(p{'}_{new}-p{'}_{old})$  for my two simulated samples 10,000 times. \n",
     "\n",
-    "Another way for comparing the mean of two independent and normal distribution is a **two-sample z-test**. You can perform the Z-test to calculate the Z_score, as shown in the equation below:\n",
+    "Another way for comparing the mean of two independent and normal distribution is a **two-sample z-test**. I can perform the Z-test to calculate the Z_score, as shown in the equation below:\n",
     "\n",
     "$$\n",
     "Z_{score} = \\frac{ (p{'}_{new}-p{'}_{old}) - (p_{new}  -  p_{old})}{ \\sqrt{ \\frac{\\sigma^{2}_{new} }{n_{new}} + \\frac{\\sigma^{2}_{old} }{n_{old}}  } }\n",
@@ -1320,9 +1319,9 @@
     "\n",
     "Next step is to make a decision to reject or fail to reject the null hypothesis based on comparing these two values: \n",
     "- $Z_{score}$\n",
-    "- $Z_{\\alpha}$ or $Z_{0.05}$, also known as critical value at 95% confidence interval.  $Z_{0.05}$ is 1.645 for one-tailed tests,  and 1.960 for two-tailed test. You can determine the $Z_{\\alpha}$ from the z-table manually. \n",
+    "- $Z_{\\alpha}$ or $Z_{0.05}$, also known as critical value at 95% confidence interval.  $Z_{0.05}$ is 1.645 for one-tailed tests,  and 1.960 for two-tailed test. I can determine the $Z_{\\alpha}$ from the z-table manually. \n",
     "\n",
-    "Decide if your hypothesis is either a two-tailed, left-tailed, or **right-tailed** test. Accordingly, reject OR fail to reject the  null based on the comparison between $Z_{score}$ and $Z_{\\alpha}$. We determine whether or not the $Z_{score}$ lies in the \"rejection region\" in the distribution. In other words, a \"rejection region\" is an interval where the null hypothesis is rejected iff the $Z_{score}$ lies in that region.\n",
+    "Decide if my hypothesis is either a two-tailed, left-tailed, or **right-tailed** test. Accordingly, reject OR fail to reject the  null based on the comparison between $Z_{score}$ and $Z_{\\alpha}$. We determine whether or not the $Z_{score}$ lies in the \"rejection region\" in the distribution. In other words, a \"rejection region\" is an interval where the null hypothesis is rejected iff the $Z_{score}$ lies in that region.\n",
     "\n",
     "\n",
     "\n",
@@ -1381,9 +1380,9 @@
     "<a id='regression'></a>\n",
     "### Part III - A regression approach\n",
     "\n",
-    "In this final part, you will see that the result you achieved in the A/B test in Part II above can also be achieved by performing regression.<br><br> \n",
+    "In this final part, I will see that the result I achieved in the A/B test in Part II above can also be achieved by performing regression.<br><br> \n",
     "\n",
-    "**a.** Since each row in the `df2` data is either a conversion or no conversion, what type of regression should you be performing in this case?"
+    "**a.** Since each row in the `df2` data is either a conversion or no conversion, what type of regression should I be performing in this case?"
    ]
   },
   {
@@ -1397,7 +1396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**b.** The goal is to use **statsmodels** library to fit the regression model you specified in part **a.** above to see if there is a significant difference in conversion based on the page-type a customer receives. However, you first need to create the following two columns in the `df2` dataframe:\n",
+    "**b.** The goal is to use **statsmodels** library to fit the regression model I specified in part **a.** above to see if there is a significant difference in conversion based on the page-type a customer receives. However, I first need to create the following two columns in the `df2` dataframe:\n",
     " 1. `intercept` - It should be `1` in the entire column. \n",
     " 2. `ab_page` - It's a dummy variable column, having a value `1` when an individual receives the **treatment**, otherwise `0`.  "
    ]
@@ -1663,7 +1662,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**c.** Use **statsmodels** to instantiate your regression model on the two columns you created in part (b). above, then fit the model to predict whether or not an individual converts. \n"
+    "**c.** Use **statsmodels** to instantiate my regression model on the two columns I created in part (b). above, then fit the model to predict whether or not an individual converts. \n"
    ]
   },
   {
@@ -1679,7 +1678,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**d.** Provide the summary of your model below, and use it as necessary to answer the following questions."
+    "**d.** Provide the summary of my model below, and use it as necessary to answer the following questions."
    ]
   },
   {
@@ -1770,7 +1769,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**e.** What is the p-value associated with **ab_page**? Why does it differ from the value you found in **Part II**?<br><br>  \n",
+    "**e.** What is the p-value associated with **ab_page**? Why does it differ from the value I found in **Part II**?<br><br>  \n",
     "\n"
    ]
   },
@@ -1785,7 +1784,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**f.** Now, you are considering other things that might influence whether or not an individual converts.  Discuss why it is a good idea to consider other factors to add into your regression model.  Are there any disadvantages to adding additional terms into your regression model?"
+    "**f.** Now, I am considering other things that might influence whether or not an individual converts.  Discuss why it is a good idea to consider other factors to add into my regression model.  Are there any disadvantages to adding additional terms into my regression model?"
    ]
   },
   {
@@ -1802,7 +1801,7 @@
     "**g. Adding countries**<br> \n",
     "Now along with testing if the conversion rate changes for different pages, also add an effect based on which country a user lives in. \n",
     "\n",
-    "1. You will need to read in the **countries.csv** dataset and merge together your `df2` datasets on the appropriate rows. You call the resulting dataframe `df_merged`. [Here](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.join.html) are the docs for joining tables. \n",
+    "1. I will need to read in the **countries.csv** dataset and merge together my `df2` datasets on the appropriate rows. I call the resulting dataframe `df_merged`. [Here](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.join.html) are the docs for joining tables. \n",
     "\n",
     "2. Does it appear that country had an impact on conversion?  To answer this question, consider the three unique values, `['UK', 'US', 'CA']`, in the `country` column. Create dummy variables for these country columns. \n",
     "\n"
@@ -2265,7 +2264,7 @@
     }
    ],
    "source": [
-    "# Fit your model, and summarize the results\n",
+    "# Fit my model, and summarize the results\n",
     "df_merged['intercept'] = 1\n",
     "df_merged[['control', 'treatment']]=pd.get_dummies(df_merged['group'])\n",
     "#lm = sm.OLS(df_merged['converted'],df_merged[['intercept','UK', 'US', 'control']])\n",
